--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite + React</title>
   </head>
   <body style="margin: 0">
-    <div id="root"></div>
+    sdfvdzv
+    <div id="root">
+wergse
+
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
