--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/logo_white.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Barriecito&family=Diplomata&family=Fascinate+Inline&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Knewave&family=Micro+5&family=Monoton&family=Offside&family=Pattaya&family=Permanent+Marker&family=Press+Start+2P&family=Protest+Guerrilla&family=Rubik+80s+Fade&display=swap" rel="stylesheet">    <title>Vite + React</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Barriecito&family=Diplomata&family=Fascinate+Inline&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Knewave&family=Micro+5&family=Monoton&family=Offside&family=Pattaya&family=Permanent+Marker&family=Press+Start+2P&family=Protest+Guerrilla&family=Rubik+80s+Fade&display=swap"
+      rel="stylesheet"
+    />
+    <title>Vite + React</title>
   </head>
   <body style="margin: 0">
-    <div id="root">
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
