--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Barriecito&family=Diplomata&family=Fascinate+Inline&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Knewave&family=Micro+5&family=Monoton&family=Offside&family=Pattaya&family=Permanent+Marker&family=Press+Start+2P&family=Protest+Guerrilla&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Kanish Chhabra</title>
   </head>
   <body style="margin: 0">
     <div id="root"></div>
